--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <nav>
       <a href="" aria-current="page">1 MUNCMBEL</a>
-      <a href="I-MUNDOCMBEL/unesco.html">Unesco</a>
-      <a href="I-MUNDOCMBEL/page2.html">Informações de Contato</a>
+      <a href="MUNCMBEL/unesco.html">Unesco</a>
+      <a href="MUNCMBEL/page2.html">Informações de Contato</a>
     </nav>
     <main>
       <h1>O que é simular ?</h1>
